todoappui/openshift/2_service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: todoappui
    labels:
      app: todoapp-ui
      deploymentconfig: todoapp-ui
  spec:
    ports:
    - name: 3000-tcp
      port: 3000
      protocol: TCP
      targetPort: 3000
    selector:
      app: todoapp-ui
      deploymentconfig: todoapp-ui
    type: ClusterIP
