todoappui/openshift/3_route.yaml
  apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: todoapp-ui
      deploymentconfig: todoapp-ui
    name: todoapp-ui
  spec:
    path: /
    port:
      targetPort: "3000"
    to:
      kind: Service
      name: todoappui
